--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "start:prodFinal": "npx tsc -p tsconfig.build.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -41,6 +42,7 @@
     "@payos/node": "^1.0.10",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "class-validator-multi-lang": "^0.140.1",
@@ -53,7 +55,7 @@
     "module-alias": "^2.2.3",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
-    "nodemailer": "^7.0.4",
+    "nodemailer": "^7.0.10",
     "nodemailer-express-handlebars": "^4.0.0",
     "open": "^10.1.2",
     "reflect-metadata": "^0.2.2",
