--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,12 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config jest.config.js --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "test:unit": "jest --config jest.config.js --testPathPattern=spec.ts",
-    "test:integration": "jest --config jest.config.js --testPathPattern=e2e-spec.ts",
+    "test:integration": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\"",
+    "test:integration:watch": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\" --watch",
+    "test:integration:coverage": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\" --coverage",
+    "test:integration:account": "jest --config jest.config.js src/modules/account/account.integration.spec.ts",
+    "test:integration:auth": "jest --config jest.config.js src/modules/auth/auth.integration.spec.ts",
+    "test:integration:service": "jest --config jest.config.js src/modules/service/service.integration.spec.ts",
     "build": "tsc",
     "typeorm": "node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d dist/src/db/data-source.js",
     "typeorm:ts": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/db/data-source.ts",
