--- a/server/.gitignore
+++ b/server/.gitignore
@@ -55,3 +55,8 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+# ignore mysql data dir
+/server/mysql-data/
+server/mysql-data/mysql.sock
