--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
-VITE_PUBLIC_API="http://localhost:8081"
+VITE_PUBLIC_API="http://localhost:8080"
 VITE_PUBLIC_FE="http://localhost:3000"
 VITE_GEMINI_API_KEY="AIzaSyBXrLziPsVqLu34HyqWEWnSd7CSxfGmpu0"
+VITE_CHAT_API_URL="http://localhost:8000/chat"
+VITE_RECOMMENDATION_API="http://localhost:8000"
