--- a/client/package.json
+++ b/client/package.json
@@ -26,23 +26,29 @@
     "highcharts": "^12.2.0",
     "highcharts-react-official": "^3.2.2",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.554.0",
     "moment": "^2.30.1",
-    "path-to-regexp": "^8.2.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^19.1.0",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "react-select": "^5.10.2",
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.13.0",
     "redux-persist": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
     "sub-vn": "^0.0.2",
+    "uuid": "^11.0.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
