--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,17 @@
 # Client Environment Variables Example
 # Copy this file to .env and fill in your actual values
 
+# Main Backend API
 VITE_API_URL=http://localhost:5000
+
+# ⚠️ AI Services - DO NOT CONFUSE PORTS!
+# Chatbot API (FastAPI) - Container: do_an_fa25_api
+VITE_CHAT_API_URL=http://localhost:8000
+
+VITE_PUBLIC_API=http://localhost:8000
+
+# Recommendation API (Flask) - Container: spa_recommender  
+VITE_RECOMMENDATION_API_URL=http://localhost:8001
+
+# Legacy (deprecated - use specific URLs above)
 VITE_AI_API_URL=http://localhost:8000
