--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node dist/main.js"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/file-saver": "^2.0.7",
+    "@types/highcharts": "^5.0.44",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.2",
@@ -61,6 +63,7 @@
     "@types/react-countup": "^4.3.0",
     "@types/react-dom": "^19.1.2",
     "@types/react-slick": "^0.23.13",
+    "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
