--- a/client/.env
+++ b/client/.env
@@ -8,7 +8,7 @@ VITE_API_URL=http://localhost:5000
 # Chatbot API (FastAPI) - Container: do_an_fa25_api
 VITE_CHAT_API_URL=http://localhost:8000
 
-VITE_PUBLIC_API=http://localhost:8080/api
+VITE_PUBLIC_API=https://api.g52-genspa.xyz/api
 
 # Recommendation API (Flask) - Container: spa_recommender  
 VITE_RECOMMENDATION_API_URL=http://localhost:8001
