--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,50 +1,15 @@
-# Build stage
-FROM node:20-alpine AS builder
-
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm ci
-
-# Copy source code
-COPY . .
-
-# Build the application
-RUN npm run build
-
-# Production stage
 FROM node:20-alpine
 
 WORKDIR /app
 
-# Install dumb-init to handle signals properly
-RUN apk add --no-cache dumb-init
-
-# Copy package files
+# Copy package files & cài dependencies
 COPY package*.json ./
+RUN npm ci --only=production
 
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Copy dist đã build trên host + .env
+COPY dist ./dist
+COPY .env ./
 
-# Copy built application from builder stage
-COPY --from=builder /app/dist ./dist
-
-# Create a non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nestjs -u 1001
-
-USER nestjs
-
-# Expose port (must match the app's PORT; default 8080)
 EXPOSE 8080
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD node -e "require('http').get('http://localhost:8080/api', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})"
-
-# Start the application
-ENTRYPOINT ["dumb-init", "--"]
-CMD ["node", "dist/main"]
+CMD ["node", "dist/main.js"]
