--- a/server/package.json
+++ b/server/package.json
@@ -12,19 +12,13 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config jest.config.js",
-    "test:watch": "jest --config jest.config.js --watch",
-    "test:cov": "jest --config jest.config.js --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --config jest.config.js --runInBand",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:unit": "jest --config jest.config.js --testPathPattern=spec.ts",
-    "test:integration": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\"",
-    "test:integration:watch": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\" --watch",
-    "test:integration:coverage": "jest --config jest.config.js --testPathPattern=\"integration.spec.ts|e2e-spec.ts\" --coverage",
-    "test:integration:account": "jest --config jest.config.js src/modules/account/account.integration.spec.ts",
-    "test:integration:auth": "jest --config jest.config.js src/modules/auth/auth.integration.spec.ts",
-    "test:integration:service": "jest --config jest.config.js src/modules/service/service.integration.spec.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json && cp -r src/modules/mail/templates dist/modules/mail/templates",
+    "copy-assets": "cpx \"src/**/*.{hbs,json,env}\" dist",
     "typeorm": "node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d dist/src/db/data-source.js",
     "typeorm:ts": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/db/data-source.ts",
     "seed:data": "ts-node -r tsconfig-paths/register src/seeds/data.seed.ts",
@@ -32,7 +26,6 @@
     "prebuild": "npm run clean",
     "migration:generate": "npm run prebuild && npm run typeorm:ts -- migration:generate src/db/migrations/migrate",
     "migration:run": "npm run build && npm run typeorm -- migration:run",
-    "migration:run:prod": "npm run typeorm -- migration:run",
     "migration:revert": "npm run build && npm run typeorm -- migration:revert",
     "copy:hbs": "copyfiles -u 1 src/**/*.hbs dist",
     "start:prodFinal": "npx tsc -p tsconfig.build.json"
@@ -85,6 +78,7 @@
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "copyfiles": "^2.4.1",
+    "cpx": "^1.5.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
